# etf-trend-algo

./: .env.docker.example  Dockerfile  README.md  algo.py  docker-compose.yml  docker_entrypoint.sh  helper.py  ingest.py  pyproject.toml  settings.cfg
